--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PhotoFeed" />
+        <activity
+            android:name=".PhotoFeed"
+            android:label="@string/Feed" />
         <activity
             android:name=".Map"
             android:label="@string/title_activity_map" />
 
         <service
             android:name=".DownloadImageService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".LocationListenerService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
